--- a/source/index-en.html
+++ b/source/index-en.html
@@ -642,11 +642,17 @@
         </div>
         <div class="footer__contacts">
             <div class="owner-info owner-info--no-border">
-                <div class="owner-info__avatar">
-                    <picture>
-                        <source type="image/webp" srcset="img/Ellipse1.webp 1x, img/Ellipse1@2x.webp 2x">
-                        <img loading="lazy"  src="img/Ellipse1.png" alt="Pavlo Tsidulia" srcset="img/Ellipse1@2x.png 2x" width="56" height="56">
-                    </picture>
+                <div class="owner-info__text">
+                    <p class="owner-info__name">Inna Popova</p>
+                    <p class="owner-info__phone">
+                        <span class="owner-info__post">Head engineer</span>
+                        <a href="tel:+380677625828" class="owner-info__phone">
+                            <svg class="owner-info__phone-icn" width="16" height="16">
+                                <use xlink:href="img/sprite.svg#icn_Frame3"></use>
+                            </svg>
+                            +38 067 762 58 28
+                        </a>
+                    </p>
                 </div>
                 <div class="owner-info__text">
                     <p class="owner-info__name">Pavlo Tsidulia</p>
