--- a/source/index.html
+++ b/source/index.html
@@ -629,11 +629,17 @@
         </div>
         <div class="footer__contacts">
             <div class="owner-info owner-info--no-border">
-                <div class="owner-info__avatar">
-                    <picture>
-                        <source type="image/webp" srcset="img/Ellipse1.webp 1x, img/Ellipse1@2x.webp 2x">
-                        <img loading="lazy"  src="img/Ellipse1.png" alt="Цидуля Павел Александрович" srcset="img/Ellipse1@2x.png 2x" width="56" height="56">
-                    </picture>
+                <div class="owner-info__text">
+                    <p class="owner-info__name">Попова Инна Григорьевна</p>
+                    <p class="owner-info__phone">
+                        <span class="owner-info__post">Главний инженер</span>
+                        <a href="tel:+380677625828" class="owner-info__phone">
+                            <svg class="owner-info__phone-icn" width="16" height="16">
+                                <use xlink:href="img/sprite.svg#icn_Frame3"></use>
+                            </svg>
+                            +38 067 762 58 28
+                        </a>
+                    </p>
                 </div>
                 <div class="owner-info__text">
                     <p class="owner-info__name">Цидуля Павел Александрович</p>
@@ -647,8 +653,8 @@
                         </a>
                     </p>
                 </div>
-                <button class="owner-info__submit-button button-blue" type="button" @click="toggleForm" >{{ !isFormPopup ? 'Оставить заявку' : 'Вернуться на главную' }}</button>
                 
+                <button class="owner-info__submit-button button-blue" type="button" @click="toggleForm" >{{ !isFormPopup ? 'Оставить заявку' : 'Вернуться на главную' }}</button>
             </div>
         </div>
     </footer>
